--- a/res/layout/ch_logo_row.xml
+++ b/res/layout/ch_logo_row.xml
@@ -21,6 +21,6 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/liquid_logo"
+            android:src="@drawable/ch_logo"
          />
 </LinearLayout> 
