--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -17,43 +17,11 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         android:title="@string/about_settings">
 
-        <PreferenceScreen android:key="liquid_logo"
-                          android:enabled="false"
-                          android:layout="@layout/liquid_logo_row" />
-
-        <!-- LiquidSmooth Downloads  -->
-        <Preference
-            android:key="download_center"
-            android:fragment="com.android.settings.liquid.Download"
-            android:title="@string/download_category"
-            android:summary="@string/download_category_summary" />
-
-        <!-- Liquid Anonymous Stats -->
-       <PreferenceScreen android:key="rominfo_settings"
-            android:title="@string/rominfo_settings_list_item_title"
-            android:summary="@string/rominfo_settings_list_item_summary">
-            <intent android:action="android.intent.action.MAIN"
-                    android:targetPackage="android.romstats"
-                    android:targetClass="android.romstats.AnonymousStats" />
-        </PreferenceScreen>
-
-        <!-- LiquidSmooth Updates -->
-        <PreferenceScreen android:key="liquidsmooth_updates"
-                android:title="@string/liquidsmoothupdate_settings_title"
-                android:summary="@string/liquidsmoothupdate_settings_summary">
-            <intent android:action="android.intent.action.MAIN"
-                    android:targetPackage="com.liquid.updater"
-                    android:targetClass="com.liquid.updater.UpdatesSettings" />
-        </PreferenceScreen>
-
-        <!-- Liquid Extra Info -->
-        <PreferenceScreen android:key="extrainfo"
-                android:title="@string/lsextrainfo"
-                android:summary="@string/lsextrainfo_summary">
-            <intent android:action="android.intent.action.MAIN"
-                    android:targetPackage="com.android.settings"
-                    android:targetClass="com.android.settings.liquid.extrainfo.MainActivity" />
-        </PreferenceScreen>
+        <PreferenceScreen 
+		
+			android:key="ch_logo"
+            android:enabled="false"
+            android:layout="@layout/ch_logo_row" />
 
         <!-- Device status - launches activity -->
         <PreferenceScreen android:key="status_info"
@@ -80,14 +48,14 @@
                     android:key="copyright"
                     android:title="@string/copyright_title">
                 <intent android:action="android.settings.COPYRIGHT" />
-            </PreferenceScreen>
+            </PreferenceScreen> 
 
             <!-- License information -->
             <PreferenceScreen
                     android:key="license"
                     android:title="@string/license_title">
                 <intent android:action="android.settings.LICENSE" />
-            </PreferenceScreen>
+            </PreferenceScreen> 
 
             <!-- Terms and conditions -->
             <PreferenceScreen
@@ -122,6 +90,33 @@
                 style="?android:preferenceInformationStyle"
                 android:title="@string/firmware_version"
                 android:summary="@string/device_info_default" />
+                
+        <!-- Mod version -->
+        <Preference android:key="mod_version"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/mod_version"
+                android:summary="@string/mod_version_default"
+                android:selectable="false" /> 
+                
+        <!-- Device Kernel version -->
+        <Preference android:key="kernel_version"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/kernel_version"
+                android:summary="@string/device_info_default"
+                android:selectable="false" />  
+                
+        <!-- Build date -->
+        <Preference android:key="build_date"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/build_date"
+                android:summary="@string/build_date_default"
+                android:selectable="false" />
+
+        <!-- Detailed build version -->
+        <Preference android:key="build_number"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/build_number"
+                android:summary="@string/device_info_default"/>           
 
         <!-- Device FCC equipment id -->
         <Preference android:key="fcc_equipment_id"
@@ -136,13 +131,15 @@
                 android:title="@string/baseband_version"
                 android:summary="@string/device_info_default"
                 android:selectable="false" />
-
-        <!-- Device Kernel version -->
-        <Preference android:key="kernel_version"
-                style="?android:preferenceInformationStyle"
-                android:title="@string/kernel_version"
-                android:summary="@string/device_info_default"
-                android:selectable="false" />
+        
+        <!-- Liquid Extra Info -->
+        <PreferenceScreen android:key="extrainfo"
+                android:title="@string/lsextrainfo"
+                android:summary="@string/lsextrainfo_summary">
+            <intent android:action="android.intent.action.MAIN"
+                    android:targetPackage="com.android.settings"
+                    android:targetClass="com.android.settings.liquid.extrainfo.MainActivity" />
+        </PreferenceScreen>           
 
         <!-- Device cpu info -->
         <Preference android:key="device_cpu"
@@ -156,27 +153,7 @@
                 style="?android:preferenceInformationStyle"
                 android:title="@string/mem_info"
                 android:summary="@string/device_info_default"
-                android:selectable="false" />
-
-        <!-- Mod version -->
-        <Preference android:key="mod_version"
-                style="?android:preferenceInformationStyle"
-                android:title="@string/mod_version"
-                android:summary="@string/mod_version_default"
-                android:selectable="false" />
-
-        <!-- Build date -->
-        <Preference android:key="build_date"
-                style="?android:preferenceInformationStyle"
-                android:title="@string/build_date"
-                android:summary="@string/build_date_default"
-                android:selectable="false" />
-
-        <!-- Detailed build version -->
-        <Preference android:key="build_number"
-                style="?android:preferenceInformationStyle"
-                android:title="@string/build_number"
-                android:summary="@string/device_info_default"/>
+                android:selectable="false" />           
 
         <!-- SELinux status information -->
         <Preference android:key="selinux_status"
@@ -184,5 +161,14 @@
                 android:title="@string/selinux_status"
                 android:summary="@string/selinux_status_enforcing"
                 android:selectable="false" />
+
+        <!-- LiquidSmooth Updates (Will be deleted automaticly)-->
+        <PreferenceScreen android:key="liquidsmooth_updates"
+                android:title="@string/liquidsmoothupdate_settings_title"
+                android:summary="@string/liquidsmoothupdate_settings_summary">
+            <intent android:action="android.intent.action.MAIN"
+                    android:targetPackage="com.liquid.updater"
+                    android:targetClass="com.liquid.updater.UpdatesSettings" />
+        </PreferenceScreen>      
 
 </PreferenceScreen>
