--- a/res/xml/liquid_interface_settings.xml
+++ b/res/xml/liquid_interface_settings.xml
@@ -51,11 +51,14 @@
         android:title="@string/recent_panel_title"
         android:summary="@string/recent_panel_summary"
         android:fragment="com.android.settings.liquid.RecentPanelSettings" />
-
-    <PreferenceScreen
-        android:key="shake_events"
-        android:title="@string/shake_events_title"
-        android:summary="@string/shake_events_summary"
-        android:fragment="com.android.settings.liquid.ShakeEvents" />
+        
+     <PreferenceScreen
+        android:key="omniswitch"
+        android:title="@string/omniswitch_title"
+        android:summary="@string/omniswitch_summary">
+        <intent android:action="android.intent.action.MAIN"
+            android:targetPackage="org.omnirom.omniswitch"
+            android:targetClass="org.omnirom.omniswitch.SettingsActivity" />
+    </PreferenceScreen>
 
 </PreferenceScreen>
