--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -18,12 +18,25 @@
         android:title="@string/sound_settings"
         android:key="sound_settings"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+        
+     <!-- CyanHacker Sound -->
+     <PreferenceCategory
+            android:title="@string/cyanhacker_title"/>
 
     <PreferenceScreen
             android:key="liquid_sound_settings"
             android:fragment="com.android.settings.liquid.SoundSettings"
             android:title="@string/liquid_sound_title" />
-
+			
+    <!-- Equalizer -->
+    <Preference
+			android:id="@+id/equalizer_settings"
+			android:title="@string/equalizer_settings_title">
+        <intent android:action="android.intent.action.MAIN"
+				android:targetClass="com.vipercn.viper4android_v2.activity.ViPER4Android"
+                android:targetPackage="com.vipercn.viper4android_v2" />
+    </Preference>        
+           
     <PreferenceCategory
             android:key="category_calls_and_notification"
             android:title="@string/sound_category_call_ringtone_vibrate_title"/>
@@ -45,7 +58,6 @@
             android:title="@string/sound_category_system_title"/>
 
     <!-- Do not nest these, or removals in code will break -->
-
     <com.android.settings.RingerVolumePreference
             android:key="ring_volume"
             android:title="@string/all_volume_title"
