Move MobilePayments to "other"

--- a/res/xml/wireless_settings.xml
+++ b/res/xml/wireless_settings.xml
@@ -46,6 +46,12 @@
         android:entries="@array/nfc_polling_mode_entries"
         android:entryValues="@array/nfc_polling_mode_values"
         android:persistent="false" />
+	
+    <PreferenceScreen	
+		android:fragment="com.android.settings.nfc.PaymentSettings"
+        android:icon="@drawable/ic_settings_nfc_payment"
+        android:title="@string/nfc_payment_settings_title"
+        android:id="@+id/nfc_payment_settings" />
 
     <PreferenceScreen
         android:fragment="com.android.settings.TetherSettings"
