--- a/res/xml/liquid_main_settings.xml
+++ b/res/xml/liquid_main_settings.xml
@@ -73,15 +73,39 @@
         settings:includeXmlForSearch="@xml/notification_drawer"
         android:id="@+id/notification_drawer"
         android:title="@string/pulldown_title"
-        android:summary="@string/pulldown_summary"
-        android:fragment="com.android.settings.liquid.NotificationDrawer" />	
+        android:fragment="com.android.settings.liquid.NotificationDrawer"
+        android:icon="@drawable/ic_pulldown"/>	
 
-    <!-- Advanced options -->
+    <!-- Advanced options -->	
+	<PreferenceScreen
+        android:key="hfm_settings"
+        android:title="@string/hfm_pref_screen_title"
+        android:fragment="com.android.settings.liquid.hfm.HfmSettings"
+        android:summary="@string/advanced_adblocker_summary"
+        android:icon="@drawable/ic_adblocker"/>
+
     <PreferenceScreen
-        settings:includeXmlForSearch="@xml/liquid_advanced_settings"
-        android:id="@+id/advanced_options_settings"
-        android:fragment="com.android.settings.liquid.AdvancedSettings"
-        android:icon="@drawable/ic_settings_advanced"
-        android:title="@string/advanced_category_title" />
+        android:key="pref_battery_saver"
+        android:fragment="com.android.settings.liquid.BatterySaverSettings"
+        android:title="@string/battery_saver_title"
+        android:summary="@string/advanced_batterysaver_summary"
+        android:icon="@drawable/ic_batterysaver"/>
+		
+    <PreferenceScreen
+        android:key="devicesettings_app"
+        android:title="@string/device_settings_title"
+        android:summary="@string/devicesettings_app_summary"
+		android:icon="@drawable/ic_device>
+        <intent
+            android:action="com.cyanogenmod.action.LAUNCH_DEVICE_SETTINGS"
+            android:targetPackage="com.cyanogenmod.settings.device"
+            android:targetClass="com.cyanogenmod.settings.device.DeviceSettings" />
+    </PreferenceScreen>
+
+    <PreferenceScreen
+        android:title="@string/superuser_settings_title"
+        android:fragment="com.koushikdutta.superuser.PolicyNativeFragment"
+        android:summary="@string/advanced_superuser_summary"
+        android:icon="@drawable/ic_su"/>	
 
 </PreferenceScreen>
