--- a/res/values/liquid_strings.xml
+++ b/res/values/liquid_strings.xml
@@ -2481,6 +2481,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="themestore">Theme Store</string>
     <string name="pulldown_title">Pulldown</string>
     <string name="pulldown_summary">Multitasking</string> 
+	<string name="animation_settings_title">Animation settings</string> 
 	
     <!-- Screen Color Settings -->
     <string name="display_color_title">Screen color</string>
