--- a/res/xml/liquid_main_settings.xml
+++ b/res/xml/liquid_main_settings.xml
@@ -67,6 +67,13 @@
         android:title="@string/statusbar_settings_title"
         android:fragment="com.android.settings.liquid.StatusBarSettings"
         android:icon="@drawable/ic_liquid_statusbar" />
+	
+	<!--Animation-->
+    <PreferenceScreen
+        android:id="@+id/animation_settings"
+        android:icon="@drawable/ic_animation"
+        android:title="@string/animation_settings_title"
+        android:fragment="com.android.settings.hacker.AnimationSettings" />
 		
 	<!-- Pulldown -->
     <PreferenceScreen
@@ -100,7 +107,6 @@
             android:action="com.cyanogenmod.action.LAUNCH_DEVICE_SETTINGS"
             android:targetPackage="com.cyanogenmod.settings.device"
             android:targetClass="com.cyanogenmod.settings.device.DeviceSettings" />
-    </PreferenceScreen>
 
     <PreferenceScreen
         android:title="@string/superuser_settings_title"
