--- a/res/xml/animation_settings.xml
+++ b/res/xml/animation_settings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2014 CyanHacker
+<!-- Copyright (C) 2014 CyanHacker based on LiquidSmooth
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -79,3 +79,5 @@
             android:entryValues="@array/toast_animation_values"
             android:persistent="false"
             android:summary="@string/toast_animation_summary" />
+			
+</PreferenceScreen>			
